--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div id="cursor"
-        class="h-5 w-5 rounded-full bg-purple-600 mix-blend-difference fixed top-0 left-0 z-40 max-lg:hidden"></div>
+        class="h-5 w-5 rounded-full bg-purple-700 mix-blend-difference fixed top-0 left-0 z-40 max-lg:hidden"></div>
     <div id="main" class="h-full w-full text-white">
         <header class="fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
             <div id="logo" class="h-12 max-md:h-7 max-sm:h-[1.6rem]">
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </header>
-        
+
         <div id="full" class="max-md:w-5/6 z-20 fixed h-full top-0 right-0 w-3/12 bg-[#17151a] translate-x-full">
             <i class="ri-close-line magnet-target text-3xl absolute top-5 right-5 cursor-pointer"></i>
         </div>
@@ -55,102 +55,113 @@
                 <div id="home-container"
                     class="flex items-center justify-center flex-col h-screen w-full absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
                     <h4 data-translate="homeSubtitle"
-                        class="text-center text-2xl font-[font4] text-zinc-300 max-md:text-lg max-sm:text-sm">Acting with integrity, a driver of trust</h4>
+                        class="text-center text-2xl font-[font4] text-zinc-300 max-md:text-lg max-sm:text-sm">Acting
+                        with integrity, a driver of trust</h4>
                     <h1 class="text-center text-8xl font-[font4] leading-none font-semibold max-md:text-6xl max-sm:text-5xl"
                         data-translate="homeTitle">
                         Your Dream Car<br>
                         Awaits You</h1>
-                    <p
-                    data-translate="homeText"
+                    <p data-translate="homeText"
                         class="text-center w-1/2 font-[font3] text-zinc-300 my-6 max-md:text-lg max-md:w-3/5 max-sm:text-sm">
-                        At INT'l Motor, we provide tailored vehicle acquisition solutions for personal or professional needs. From cars to machinery, our expert team ensures top-quality service with integrity and excellence.</p>
-                    <button class="py-2 px-6 border-2 rounded-lg max-sm:text-sm">Discover our brokerage solutions</button>
+                        At INT'l Motor, we provide tailored vehicle acquisition solutions for personal or professional
+                        needs. From cars to machinery, our expert team ensures top-quality service with integrity and
+                        excellence.</p>
+                    <button class="py-2 px-6 border-2 rounded-lg max-sm:text-sm">Discover our brokerage
+                        solutions</button>
                 </div>
             </section>
             <section class="about-us mt-20">
                 <div class="max-w-7xl mx-auto p-6">
-                <div class="text-center mb-8">
-                    <p class="text-gray-400 font-[font3] font-semibold text-2xl">
-                    About Our Company
-                    </p>
-                    <h1 class="text-5xl leading-none tracking-tight font-[font1]">
-                        Innovative solution designed to revolutionize the way of acquiring a vehicle
-                    </h1>
-                </div>
-                <div class="flex justify-center space-x-8 my-8">
-                    <div class="text-center">
-                    <p class="text-3xl font-bold text-blue-600">
-                    1k+
-                    </p>
-                    <p class="text-gray-500">
-                    Deal with Clients
-                    </p>
+                    <div class="text-center mb-8">
+                        <p class="text-gray-400 font-[font3] font-semibold text-2xl">
+                            About Our Company
+                        </p>
+                        <h1 class="text-5xl leading-none tracking-tight font-[font1]">
+                            Innovative solution designed to revolutionize the way of acquiring a vehicle
+                        </h1>
                     </div>
-                    <div class="text-center">
-                    <p class="text-3xl font-bold text-blue-600">
-                    99%
-                    </p>
-                    <p class="text-gray-500">
-                    Happy Customers
-                    </p>
+                    <div class="flex justify-center space-x-8 my-8">
+                        <div class="text-center">
+                            <p class="font-bold text-purple-700 text-4xl">
+                                1k+
+                            </p>
+                            <p class="text-gray-400 text-lg">
+                                Deal with Clients
+                            </p>
+                        </div>
+                        <div class="text-center">
+                            <p class="font-bold text-purple-700 text-4xl">
+                                99%
+                            </p>
+                            <p class="text-gray-400 text-lg">
+                                Happy Customers
+                            </p>
+                        </div>
+                        <div class="text-center">
+                            <p class="font-bold text-purple-700 text-4xl">
+                                1k+
+                            </p>
+                            <p class="text-gray-400 text-lg">
+                                Deals Locked
+                            </p>
+                        </div>
                     </div>
-                    <div class="text-center">
-                    <p class="text-3xl font-bold text-blue-600">
-                    1k+
-                    </p>
-                    <p class="text-gray-500">
-                    Deals Locked
-                    </p>
+                    <div class="flex flex-col lg:flex-row lg:space-x-8">
+                        <div class="lg:w-1/2 mb-8 lg:mb-0">
+                            <img alt="Two people discussing a project in an office setting" class="rounded-lg w-full"
+                                height="400"
+                                src="https://storage.googleapis.com/a1aa/image/5GYbAq9jf7wCciYgc9rnnFf6eYs6DmyebpjtOcO0b8AfqFrfE.jpg"
+                                width="600" />
+                        </div>
+                        <div class="lg:w-1/2 space-y-6">
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 ">
+                                <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                                    <h2 class="text-xl font-bold mb-2">
+                                        Ad Campaign Strategies
+                                    </h2>
+                                    <p class="text-zinc-400">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad rem molestiae
+                                        placeat nihil laudantium. Commodi quasi, illo magnam laboriosam quo, quas error,
+                                        voluptatibus sed soluta nulla dignissimos veritatis doloribus unde.
+                                    </p>
+                                    <button class="text-purple-700 font-semibold">
+                                        Read More
+                                        <i class="fas fa-arrow-right">
+                                        </i>
+                                    </button>
+                                </div>
+                                <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                                    <h2 class="text-xl font-bold mb-2">
+                                        Content Strategy
+                                    </h2>
+                                    <p class="text-zinc-400">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, distinctio id
+                                        tenetur deleniti excepturi libero.
+                                    </p>
+                                    <button class="text-purple-700 font-semibold">
+                                        Read More
+                                        <i class="fas fa-arrow-right">
+                                        </i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                                <h2 class="text-xl font-bold mb-2">
+                                    Business Scaling
+                                </h2>
+                                <p class="text-zinc-400 mb-4">
+                                    Our expert strategies in business scaling help you expand your operations
+                                    efficiently, ensuring sustainable growth and increased market presence. Partner with
+                                    us to elevate your business to new heights.
+                                </p>
+                                <button class="text-purple-700 font-semibold">
+                                    Read More
+                                    <i class="fas fa-arrow-right">
+                                    </i>
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="flex flex-col lg:flex-row lg:space-x-8">
-                    <div class="lg:w-1/2 mb-8 lg:mb-0">
-                    <img alt="Two people discussing a project in an office setting" class="rounded-lg w-full" height="400" src="https://storage.googleapis.com/a1aa/image/5GYbAq9jf7wCciYgc9rnnFf6eYs6DmyebpjtOcO0b8AfqFrfE.jpg" width="600"/>
-                    </div>
-                    <div class="lg:w-1/2 space-y-6">
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="bg-blue-50 p-6 rounded-lg">
-                    <h2 class="text-xl font-bold mb-2">
-                        Ad Campaign Strategies
-                    </h2>
-                    <p class="text-gray-600 mb-4">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad rem molestiae placeat nihil laudantium. Commodi quasi, illo magnam laboriosam quo, quas error, voluptatibus sed soluta nulla dignissimos veritatis doloribus unde.
-                    </p>
-                    <button class="text-blue-600 font-semibold">
-                        Read More
-                        <i class="fas fa-arrow-right">
-                        </i>
-                    </button>
-                    </div>
-                    <div class="bg-gray-50 p-6 rounded-lg">
-                    <h2 class="text-xl font-bold mb-2">
-                        Content Strategy
-                    </h2>
-                    <p class="text-gray-600 mb-4">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, distinctio id tenetur deleniti excepturi libero.
-                    </p>
-                    <button class="text-blue-600 font-semibold">
-                        Read More
-                        <i class="fas fa-arrow-right">
-                        </i>
-                    </button>
-                    </div>
-                    </div>
-                    <div class="bg-blue-50 p-6 rounded-lg">
-                    <h2 class="text-xl font-bold mb-2">
-                    Business Scaling
-                    </h2>
-                    <p class="text-gray-600 mb-4">
-                    Our expert strategies in business scaling help you expand your operations efficiently, ensuring sustainable growth and increased market presence. Partner with us to elevate your business to new heights.
-                    </p>
-                    <button class="text-blue-600 font-semibold">
-                    Read More
-                    <i class="fas fa-arrow-right">
-                    </i>
-                    </button>
-                    </div>
-                    </div>
-                </div>
                 </div>
             </section>
             <section class="testimonials">
@@ -314,7 +325,8 @@
                                 <a rel="noopener noreferrer" class="font-[font3]" href="#">Insurance</a>
                             </li>
                             <li>
-                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Maintenance & Installation</a>
+                                <a rel="noopener noreferrer" class="font-[font3]" href="#">Maintenance &
+                                    Installation</a>
                             </li>
                             <li>
                                 <a rel="noopener noreferrer" class="font-[font3]" href="#">Shop</a>
@@ -350,7 +362,8 @@
                     </div>
                 </div>
             </div>
-            <div class="py-6 text-sm text-center text-gray-400 dark:text-gray-600">© 2024 INT'l MOTOR Co. All rights reserved.</div>
+            <div class="py-6 text-sm text-center text-gray-400 dark:text-gray-600">© 2024 INT'l MOTOR Co. All rights
+                reserved.</div>
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
