--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                     </p>
                                     <button class="text-purple-700 font-semibold">
                                         Read More
-                                        <i class="fas fa-arrow-right">
+                                        <i class="fas fa-arrow-right text-white">
                                         </i>
                                     </button>
                                 </div>
@@ -140,7 +140,7 @@
                                     </p>
                                     <button class="text-purple-700 font-semibold">
                                         Read More
-                                        <i class="fas fa-arrow-right">
+                                        <i class="fas fa-arrow-right text-white">
                                         </i>
                                     </button>
                                 </div>
@@ -156,7 +156,7 @@
                                 </p>
                                 <button class="text-purple-700 font-semibold">
                                     Read More
-                                    <i class="fas fa-arrow-right">
+                                    <i class="fas fa-arrow-right text-white">
                                     </i>
                                 </button>
                             </div>
