--- a/index.html
+++ b/index.html
@@ -117,12 +117,10 @@
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 ">
                                 <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
                                     <h2 class="text-xl font-bold mb-2">
-                                        Ad Campaign Strategies
+                                        About Company
                                     </h2>
                                     <p class="text-zinc-400">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad rem molestiae
-                                        placeat nihil laudantium. Commodi quasi, illo magnam laboriosam quo, quas error,
-                                        voluptatibus sed soluta nulla dignissimos veritatis doloribus unde.
+                                        Int'l Motor is an international brokerage company that provides unique vehicle acquisition solutions for personal or professional use.
                                     </p>
                                     <button class="text-purple-700 font-semibold">
                                         Read More
@@ -132,11 +130,10 @@
                                 </div>
                                 <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
                                     <h2 class="text-xl font-bold mb-2">
-                                        Content Strategy
+                                        Commitment
                                     </h2>
                                     <p class="text-zinc-400">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, distinctio id
-                                        tenetur deleniti excepturi libero.
+                                        Our company firmly establishes its narrative through unparalleled brokerage solutions and exclusive client projects, driven by a commitment to Integrity and Excellence.    
                                     </p>
                                     <button class="text-purple-700 font-semibold">
                                         Read More
@@ -147,12 +144,10 @@
                             </div>
                             <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
                                 <h2 class="text-xl font-bold mb-2">
-                                    Business Scaling
+                                    Mission
                                 </h2>
                                 <p class="text-zinc-400 mb-4">
-                                    Our expert strategies in business scaling help you expand your operations
-                                    efficiently, ensuring sustainable growth and increased market presence. Partner with
-                                    us to elevate your business to new heights.
+                                    With its extensive resources, the company is committed to delivering the best acquisition services in the market. Whether you need new or used vehicles, construction or agricultural machinery, utility vehicles, motorcycles, special vehicles, or services for private individuals, Int'l Motor is dedicated to meeting your specific needs.    
                                 </p>
                                 <button class="text-purple-700 font-semibold">
                                     Read More
