--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="cursor"
         class="h-5 w-5 rounded-full bg-purple-700 mix-blend-difference fixed top-0 left-0 z-40 max-lg:hidden"></div>
     <div id="main" class="h-full w-full text-white">
-        <header class="backdrop-blur-sm fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
+        <!-- <header class="backdrop-blur-sm fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
             <div id="logo" class="h-12 max-md:h-7 max-sm:h-[1.6rem]">
                 <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="" class="h-full object-cover">
             </div>
@@ -43,8 +43,8 @@
                     <i class="ri-menu-4-line text-3xl cursor-pointer max-sm:text-2xl hidden max-md:contents"></i>
                 </div>
             </div>
-        </header>
-
+        </header> -->
+        
         <div id="full" class="max-md:w-5/6 z-20 fixed h-full top-0 right-0 w-3/12 bg-[#17151a] translate-x-full">
             <i class="ri-close-line magnet-target text-3xl absolute top-5 right-5 cursor-pointer"></i>
         </div>
@@ -66,8 +66,10 @@
                         At INT'l Motor, we provide tailored vehicle acquisition solutions for personal or professional
                         needs. From cars to machinery, our expert team ensures top-quality service with integrity and
                         excellence.</p>
-                    <button class="py-2 px-6 border-2 rounded-lg max-sm:text-sm">Discover our brokerage
+                        <div class="flex items-center gap-5 max-sm:flex-col max-sm:gap-1"><button class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover our brokerage
                         solutions</button>
+                    <button class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find Vehical of your dreams</button></div>
+                    
                 </div>
             </section>
             <section class="about-us mt-20">
