--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 ">
                                 <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
                                     <h2 class="text-xl font-bold mb-2">
-                                        About Company
+                                        ECO-RESPONSIBILITY
                                     </h2>
                                     <p class="text-zinc-400">
-                                        Int'l Motor is an international brokerage company that provides unique vehicle acquisition solutions for personal or professional use.
+                                        ●Preservation of terrestrial, aerial, and marine environments. <br>
+                                        ●Trade-in of fossil fuel-powered vehicles for buyers opting for an electric model. <br>
+                                        ●"Green Resolution 2028" envisions a transition leading exclusively to the acquisition of hybrid or electric vehicles by that deadline.    
                                     </p>
                                     <button class="text-purple-700 font-semibold">
                                         Read More
@@ -130,10 +132,11 @@
                                 </div>
                                 <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
                                     <h2 class="text-xl font-bold mb-2">
-                                        Commitment
+                                        CUSTOMER REQUIREMENTS
                                     </h2>
                                     <p class="text-zinc-400">
-                                        Our company firmly establishes its narrative through unparalleled brokerage solutions and exclusive client projects, driven by a commitment to Integrity and Excellence.    
+                                        ●Our buyers and partners benefit from high-quality support that meets all requirements. <br>
+                                        ●Continuous investment in project management software to ensure superior service.
                                     </p>
                                     <button class="text-purple-700 font-semibold">
                                         Read More
@@ -144,10 +147,11 @@
                             </div>
                             <div class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
                                 <h2 class="text-xl font-bold mb-2">
-                                    Mission
+                                    SOCIAL JUSTICE
                                 </h2>
                                 <p class="text-zinc-400 mb-4">
-                                    With its extensive resources, the company is committed to delivering the best acquisition services in the market. Whether you need new or used vehicles, construction or agricultural machinery, utility vehicles, motorcycles, special vehicles, or services for private individuals, Int'l Motor is dedicated to meeting your specific needs.    
+                                    ●Int’l Motor is committed to serving as a sustainable driver of economic autonomy. <br>
+                                    ●Our “Acquisition Options” contribute to supporting economic players in the countries where we operate.    
                                 </p>
                                 <button class="text-purple-700 font-semibold">
                                     Read More
