--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="max-w-7xl mx-auto p-6">
                     <div class="text-center mb-8">
                         <p class="text-gray-400 font-[font3] font-semibold text-2xl">
-                            About Our Company
+                            WHAT WE ENGAGED
                         </p>
                         <h1 class="text-5xl leading-none tracking-tight font-[font1]">
                             Innovative solution designed to revolutionize the way of acquiring a vehicle
