--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                     
                 </div>
             </section>
+            <section class="services-offered">
+                
+            </section>
             <section class="about-us mt-20">
                 <div class="max-w-7xl mx-auto p-6">
                     <div class="text-center mb-8">
